@@ -43,6 +43,8 @@ def register():
         product.ProductQuantitiesByWarehouse,
         product.ProductQuantitiesByWarehouseContext,
         product.RecomputeCostPriceStart,
+        product.CostPriceRevision,
+        product.ModifyCostPriceStart,
         inventory.Inventory,
         inventory.InventoryLine,
         inventory.CountSearch,
@@ -59,6 +61,7 @@ def register():
         shipment.AssignShipmentInReturn,
         product.OpenProductQuantitiesByWarehouse,
         product.RecomputeCostPrice,
+        product.ModifyCostPrice,
         inventory.Count,
         party.PartyReplace,
         party.PartyErase,
