@@ -44,6 +44,87 @@ this repository contains the full copyright notices and license terms. -->
             <field name="interval_type">days</field>
         </record>
 
+        <record model="ir.ui.view" id="product_cost_price_revision_view_form">
+            <field name="model">product.cost_price.revision</field>
+            <field name="type">form</field>
+            <field name="name">product_cost_price_revision_form</field>
+        </record>
+        <record model="ir.ui.view" id="product_cost_price_revision_view_list">
+            <field name="model">product.cost_price.revision</field>
+            <field name="type">tree</field>
+            <field name="name">product_cost_price_revision_list</field>
+        </record>
+
+        <record model="ir.action.act_window" id="act_product_cost_price_revision">
+            <field name="name">Cost Price Revision</field>
+            <field name="res_model">product.cost_price.revision</field>
+            <field
+                name="domain"
+                eval="[If(Eval('active_ids', []) == [Eval('active_id')], (If(Eval('active_model') == 'product.template', 'template', 'product'), '=', Eval('active_id', -1)), (If(Eval('active_model') == 'product.template', 'template', 'product'), 'in', Eval('active_ids', [])))]"
+                pyson="1"/>
+        </record>
+        <record model="ir.action.act_window.view" id="act_product_cost_price_revision_list_view">
+            <field name="sequence" eval="10"/>
+            <field name="view" ref="product_cost_price_revision_view_list"/>
+            <field name="act_window" ref="act_product_cost_price_revision"/>
+        </record>
+        <record model="ir.action.act_window.view" id="act_product_cost_price_revision_form_view">
+            <field name="sequence" eval="20"/>
+            <field name="view" ref="product_cost_price_revision_view_form"/>
+            <field name="act_window" ref="act_product_cost_price_revision"/>
+        </record>
+        <record model="ir.action.keyword" id="act_product_cost_price_revision_keyword1">
+            <field name="keyword">form_relate</field>
+            <field name="model">product.template,-1</field>
+            <field name="action" ref="act_product_cost_price_revision"/>
+        </record>
+        <record model="ir.action.keyword" id="act_product_cost_price_revision_keyword2">
+            <field name="keyword">form_relate</field>
+            <field name="model">product.product,-1</field>
+            <field name="action" ref="act_product_cost_price_revision"/>
+        </record>
+
+        <record model="ir.model.access" id="access_product_cost_price_revision">
+            <field name="model" search="[('model', '=', 'product.cost_price.revision')]"/>
+            <field name="perm_read" eval="True"/>
+            <field name="perm_write" eval="False"/>
+            <field name="perm_create" eval="False"/>
+            <field name="perm_delete" eval="False"/>
+        </record>
+        <record model="ir.model.access" id="access_product_cost_price_revision_admin">
+            <field name="model" search="[('model', '=', 'product.cost_price.revision')]"/>
+            <field name="group" ref="product.group_product_admin"/>
+            <field name="perm_read" eval="True"/>
+            <field name="perm_write" eval="True"/>
+            <field name="perm_create" eval="True"/>
+            <field name="perm_delete" eval="True"/>
+        </record>
+
+        <record model="ir.ui.view" id="product_modify_cost_price_start_form">
+            <field name="model">product.modify_cost_price.start</field>
+            <field name="type">form</field>
+            <field name="name">product_modify_cost_price_start_form</field>
+        </record>
+
+        <record model="ir.action.wizard" id="wizard_product_modify_cost_price">
+            <field name="name">Modify Cost Price</field>
+            <field name="wiz_name">product.modify_cost_price</field>
+        </record>
+        <record model="ir.action.keyword" id="product_modify_cost_price_keyword1">
+            <field name="keyword">form_action</field>
+            <field name="model">product.product,-1</field>
+            <field name="action" ref="wizard_product_modify_cost_price"/>
+        </record>
+        <record model="ir.action.keyword" id="product_modify_cost_price_keyword2">
+            <field name="keyword">form_action</field>
+            <field name="model">product.template,-1</field>
+            <field name="action" ref="wizard_product_modify_cost_price"/>
+        </record>
+        <record model="ir.action-res.group" id="wizard_product_modify_cost_price-group_account">
+            <field name="action" ref="wizard_product_modify_cost_price"/>
+            <field name="group" ref="product.group_product_admin" />
+        </record>
+
         <record model="ir.ui.view" id="location_quantity_view_tree">
             <field name="model">stock.location</field>
             <field name="type">tree</field>
