@@ -1,0 +1,15 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<form cursor="cost_price">
+    <label name="template"/>
+    <field name="template"/>
+    <label name="product"/>
+    <field name="product"/>
+    <label name="date"/>
+    <field name="date"/>
+    <label name="company"/>
+    <field name="company"/>
+    <label name="cost_price"/>
+    <field name="cost_price" colspan="3"/>
+</form>
