@@ -1,0 +1,10 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<tree>
+    <field name="template" expand="1"/>
+    <field name="product" expand="1"/>
+    <field name="date"/>
+    <field name="cost_price" expand="2"/>
+    <field name="company"/>
+</tree>
