@@ -1,0 +1,9 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<form col="2">
+    <label name="cost_price"/>
+    <field name="cost_price"/>
+    <label name="date"/>
+    <field name="date"/>
+</form>
